--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@
 /template/__pycache__
 /Assignment3/data
 /Assignment3/wandb
+/Assignment5/assignment_5_l copy.ipynb
+/Assignment5_l_saved copy.ipynb
+/Assignment5/experiments
